# SSL_SELECT_CHAT

./: CMakeLists.txt  README.md
CERTS/: cacert.pem  cakey.pem  server_cert_req.csr  server_priv.key
CERTS/Incorrect Cert/: server.cert
Client/: CMakeLists.txt  Makefile  cacert.pem  cakey.pem  client  clnt.c  common.c  common.h
Server/: CMakeLists.txt  MakeFile  common.c  common.h  serve  server.cert  server_cert_req.csr  server_priv.key  sserver  svr  svr.c
